# ghostpost_backend

./: README.md  db.sqlite3  manage.py  pyproject.toml
drfghostpost_backend/: asgi.py  settings.py  urls.py  wsgi.py
ghostpost_app/: admin.py  models.py  serializers.py  views.py
ghostpost_app/migrations/: 0001_initial.py
